added character creator logic

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div>
                     <p>Class</p>
                     <select class='input-fields' name='class' id='class-select'>
+                        <option>Choose Class</option>
                         <option value='warrior'>Warrior</option>
                         <option value='rogue'>Rogue</option>
                         <option value='mage'>Mage</option>
@@ -36,6 +37,7 @@
                 <div>
                     <p>Sub-Class</p>
                     <select class='input-fields' name='subclass' id='subclass-select'>
+                        <option>Choose Subclass</option>
                         <option id='subclass-1'></option>
                         <option id='subclass-2'></option>
                         <option id='subclass-3'></option>
