added new stats

--- a/index.html
+++ b/index.html
@@ -51,44 +51,40 @@
         </div>
     </div>
     <div class='char-display-div'>
-        <p class='display'>Here is your character...</p>
         <div>
-            <div>
+            <div class='div-border'>
                 <p class='label inline'>Name:</p>
-                <p class='display inline' id='name-display'></p>
+                <p class='info' id='name-display'></p>
             </div>
-            <div>
+            <div class='div-border'>
                 <p class='label inline'>Gender:</p>
-                <p class='display inline' id='gender-display'></p>
+                <p class='info' id='gender-display'></p>
             </div>
-            <div>
+            <div class='div-border'>
                 <p class='label inline'>Race:</p>
-                <p class='display inline' id='race-display'></p>
+                <p class='info' id='race-display'></p>
             </div>
-            <div>
+            <div class='div-border'>
                 <p class='label inline'>Class:</p>
-                <p class='display inline' id='class-display'></p>
+                <p class='info' id='class-display'></p>
             </div>
-            <div>
+            <div class='div-border'>
                 <p class='label inline'>Subclass:</p>
-                <p class='display inline' id='subclass-display'></p>
+                <p class='info' id='subclass-display'></p>
             </div>
-            <div>
-                <p class='display' id='attr-display-div'>
-                    <p class='display'>Your Character's Main Attributes</p>
-                    <div>
-                        <p class='label inline'>Strength:</p>
-                        <p class='display inline' id='str-display'></p>
-                    </div>
-                    <div>
-                        <p class='label inline'>Dexterity:</p>
-                        <p class='display inline' id='dex-display'></p>
-                    </div>
-                    <div>
-                        <p class='label inline'>Intelligence:</p>
-                        <p class='display inline' id='int-display'></p>
-                    </div>
-
+            <div class='section' id='attr-display-div'>
+                <div class='div-border'>
+                    <p class='label inline'>Strength:</p>
+                    <p class='info' id='str-display'></p>
+                </div>
+                <div class='div-border'>
+                    <p class='label inline'>Dexterity:</p>
+                    <p class='info' id='dex-display'></p>
+                </div>
+                <div class='div-border'>
+                    <p class='label inline'>Intelligence:</p>
+                    <p class='info' id='int-display'></p>
+                </div>
             </div>
         </div>
 
